@@ -1824,7 +1824,7 @@ if vbm.print
     str = [str struct('name', 'Noise reduction:','value',...
            sprintf('ORNLM(%0.2f) + MRF(%0.2f)',ornlmstr,job.extopts.mrf))];   
   end
-  str = [str struct('name', 'NCstr / LASstr / gcutstr / cleanupstr:','value',...
+  str = [str struct('name', 'NCstr / LASstr / GCUTstr / CLEANUPstr:','value',...
          sprintf('%0.2f / %0.2f / %0.2f / %0.2f',...
          job.extopts.NCstr,job.extopts.LASstr,job.extopts.gcutstr,job.extopts.cleanupstr))]; 
 %  str = [str struct('name', 'Norm. voxel size:','value',sprintf('%0.2f mm',vbm.vox))]; % does not work yet 
@@ -1835,27 +1835,27 @@ if vbm.print
   % Image Quality measures:
   % --------------------------------------------------------------------
   str2 =       struct('name', '\bfImage and Preprocessing Quality:','value',''); 
-  str2 = [str2 struct('name', ' Voxel Resolution:','value',sprintf('%sx%sx%s cm%s', ...
-                mark2str2(qam.QM.res_vx_vol(1),'%4.2f',qa.QM.res_vx_vol(1)),...
-                mark2str2(qam.QM.res_vx_vol(2),'%4.2f',qa.QM.res_vx_vol(2)),...
-                mark2str2(qam.QM.res_vx_vol(3),'%4.2f',qa.QM.res_vx_vol(3)),char(179)))];
-  str2 = [str2 struct('name', ' Voxel Volume:','value', ...
-               sprintf('%s',marks2str(qam.QM.res_vol,sprintf('%5.2f mm%s',qa.QM.res_vol,char(179)))))];
+  str2 = [str2 struct('name', ' Voxel resolution:','value',sprintf('%sx%sx%s mm%s', ...
+                sprintf('%4.2f',qa.QM.res_vx_vol(1)),...
+                sprintf('%4.2f',qa.QM.res_vx_vol(2)),...
+                sprintf('%4.2f',qa.QM.res_vx_vol(3)),char(179)))];
+  str2 = [str2 struct('name', ' Voxel volume:','value', ...
+               sprintf('%5.2f mm%s',qa.QM.res_vol,char(179)))];
   str2 = [str2 struct('name',' Resolution:','value',marks2str(qam.QM.res_RMS,sprintf('%5.2f',qam.QM.res_RMS)))];
   str2 = [str2 struct('name',' Noise:','value',marks2str(qam.QM.NCR,sprintf('%5.2f',qam.QM.NCR)))];
   str2 = [str2 struct('name',' Bias:','value',marks2str(qam.QM.ICR,sprintf('%5.2f',qam.QM.ICR)))];
-  str2 = [str2 struct('name','\bf Average:','value',marks2str(qam.QM.rms,sprintf('%5.2f',qam.QM.rms)))];
+  str2 = [str2 struct('name','\bf Weighted average:','value',marks2str(qam.QM.rms,sprintf('%5.2f',qam.QM.rms)))];
 
       
   % Subject Measures
   % --------------------------------------------------------------------
   str3 = struct('name', '\bfVolumes:','value',sprintf('%4s %4s %4s %4s cm%s','CSF','GM','WM','WMH')); 
-  str3 = [str3 struct('name', ' absolute volume:','value',sprintf('%s %s %s %s cm%s', ...
+  str3 = [str3 struct('name', ' Absolute volume:','value',sprintf('%s %s %s %s cm%s', ...
           mark2str2(qam.SM.vol_rel_CGW(1),'%4.0f',qa.SM.vol_abs_CGW(1)),...
           mark2str2(qam.SM.vol_rel_CGW(2),'%4.0f',qa.SM.vol_abs_CGW(2)),...
           mark2str2(qam.SM.vol_rel_CGW(3),'%4.0f',qa.SM.vol_abs_CGW(3)),...
           mark2str2(qam.SM.vol_rel_CGW(4),'%4.0f',qa.SM.vol_abs_CGW(4)),char(179)))];
-  str3 = [str3 struct('name', ' relative volume:','value',sprintf('%s %s %s %s %%', ...
+  str3 = [str3 struct('name', ' Relative volume:','value',sprintf('%s %s %s %s %%', ...
           mark2str2(qam.SM.vol_rel_CGW(1),'%0.1f',qa.SM.vol_rel_CGW(1)*100),...
           mark2str2(qam.SM.vol_rel_CGW(2),'%0.1f',qa.SM.vol_rel_CGW(2)*100),...
           mark2str2(qam.SM.vol_rel_CGW(3),'%0.1f',qa.SM.vol_rel_CGW(3)*100),...
@@ -2063,8 +2063,6 @@ if vbm.print
   else
     try %#ok<TRYNC>
       spm_orthviews('window',hhm ,[0 1]); 
-    end
-    try %#ok<TRYNC>
       colorbar('location','west','position',[pos(2,1) + 0.30 0.38 0.02 0.15], ...
         'YTick',ytick,'YTickLabel',yticklabel,'FontSize',fontsize,'FontWeight','Bold');
     end
